typescript/checker/tests/conformance/parser/ecmascript5/TupleTypes/TupleType6.ts.stderr
error: Unexpected token Some(Comma)
 --> $DIR/tests/conformance/parser/ecmascript5/TupleTypes/TupleType6.ts:1:16
  |
1 | var v: [number,,]
  |                ^

